--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,33 @@
 html {
     font-size: 1rem;
-    --page-backcolor: rgb(116, 235, 4);
+    --green: rgb(116, 235, 4);
+    --yellow: rgb(255, 242, 0);;
 }
 
+
 body {
-    background-color: #3c3c3c;
+    background-color: rgb(0, 0, 35);
     color: white;
     margin: 0 10% 0 10%;
 }
+
+h1 {
+    text-align: center;
+    font-style: italic;
+    color: var(--green);
+    text-shadow: 1px 0 2px var(--yellow);
+    padding: 10px;
+}
+
+a {
+    padding: 10px;
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: var(--green)
+}
+
 
 /* #sidebar {
     margin: 0;
@@ -37,7 +57,7 @@ body {
 }
 
 .page-button {
-    background-color: #575757;
+    background-color: #393939;
     color: white;
     display: inline-flex;
     justify-content: center;
@@ -52,20 +72,20 @@ body {
 }
 
 .active {
-    background-color: rgb(255, 242, 0);
+    background-color: var(--yellow);
     color: black;
     font-weight: bold;
 }
 
 .page-button:hover {
-    background-color: var(--page-backcolor);
-    box-shadow: 0 0 5px var(--page-backcolor);
+    background-color: var(--green);
+    box-shadow: 0 0 5px var(--green);
     color: white;
     cursor: pointer;
 }
 
 .page-button.active:hover {
-    background-color: rgb(210, 238, 0);
+    background-color: var(--yellow);
     color: black;
     font-weight: bold;
 }
@@ -119,6 +139,13 @@ body {
 @media screen and (max-width: 650px) {
     .page-button {
         width: 40px;
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .page-button {
+        width: 35px;
         font-size: 1rem;
     }
 }
